--- a/HtmlTemplate/compilerconfig.json
+++ b/HtmlTemplate/compilerconfig.json
@@ -1,6 +1,6 @@
 ﻿[
-  {
-    "outputFile": "assets/css/style.css",
-    "inputFile": "assets/sass/style.scss"
-  }
+  //{
+  //  "outputFile": "assets/css/style.css",
+  //  "inputFile": "assets/sass/style.scss"
+  //}
 ]
