--- a/HtmlTemplate/compilerconfig.json
+++ b/HtmlTemplate/compilerconfig.json
@@ -1,6 +1,10 @@
 ﻿[
   {
     "outputFile": "assets/css/layout.css",
-    "inputFile": "assets/sass/style.scss"
+    "inputFile": "assets/sass/layout.scss"
+  },
+  {
+    "outputFile": "assets/css/SearchResult.css",
+    "inputFile": "assets/sass/SearchResult.scss"
   }
 ]
